@@ -18,13 +18,13 @@
 package it.eng.spagobi.tools.dataset.common.dataproxy;
 
 import java.sql.Connection;
+import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Statement;
 
 import org.apache.log4j.Logger;
 
-import it.eng.spago.error.EMFUserError;
 import it.eng.spagobi.tools.dataset.common.datareader.IDataReader;
 import it.eng.spagobi.tools.dataset.common.datastore.IDataStore;
 import it.eng.spagobi.tools.datasource.bo.IDataSource;
@@ -32,7 +32,7 @@ import it.eng.spagobi.utilities.exceptions.SpagoBIRuntimeException;
 
 public class JDBCPostgreSQLDataProxy extends JDBCDataProxy {
 
-	private static transient Logger logger = Logger.getLogger(JDBCPostgreSQLDataProxy.class);
+	private static final Logger logger = Logger.getLogger(JDBCPostgreSQLDataProxy.class);
 
 	private String statement;
 
@@ -73,7 +73,7 @@ public class JDBCPostgreSQLDataProxy extends JDBCDataProxy {
 	}
 
 	@Override
-	public IDataStore load(String statement, IDataReader dataReader) throws EMFUserError {
+	public IDataStore load(String statement, IDataReader dataReader) {
 		if (statement != null) {
 			setStatement(statement);
 		}
@@ -85,7 +85,7 @@ public class JDBCPostgreSQLDataProxy extends JDBCDataProxy {
 
 		IDataStore dataStore;
 		Connection connection;
-		Statement stmt;
+		PreparedStatement stmt;
 		ResultSet resultSet;
 
 		logger.debug("IN");
@@ -101,20 +101,20 @@ public class JDBCPostgreSQLDataProxy extends JDBCDataProxy {
 			} catch (Exception t) {
 				throw new SpagoBIRuntimeException("An error occurred while creating connection", t);
 			}
-			try {
-				stmt = connection.createStatement();
-			} catch (Exception t) {
-				throw new SpagoBIRuntimeException("An error occurred while creating connection steatment", t);
-			}
+			
+				
+			
 			String sqlQuery = "";
 			try {
+				sqlQuery = getFinalStatement();
+				stmt = connection.prepareStatement(sqlQuery);
 				// get max size
 				if (getMaxResults() > 0) {
 					stmt.setMaxRows(getMaxResults());
 				}
-				sqlQuery = getFinalStatement();
+				
 				logger.info("Executing query " + sqlQuery + " ...");
-				resultSet = stmt.executeQuery(sqlQuery);
+				resultSet = stmt.executeQuery();
 			} catch (Exception t) {
 				throw new SpagoBIRuntimeException("An error occurred while executing statement: " + sqlQuery, t);
 			}
@@ -149,7 +149,7 @@ public class JDBCPostgreSQLDataProxy extends JDBCDataProxy {
 
 			if (resultNumber > -1) { // it means that resultNumber was successfully calculated by this data proxy
 				int limitedResultNumber = getMaxResults() > 0 && resultNumber > getMaxResults() ? getMaxResults() : resultNumber;
-				dataStore.getMetaData().setProperty("resultNumber", new Integer(limitedResultNumber));
+				dataStore.getMetaData().setProperty("resultNumber", Integer.valueOf(limitedResultNumber));
 			}
 
 		} finally {
@@ -167,20 +167,20 @@ public class JDBCPostgreSQLDataProxy extends JDBCDataProxy {
 	protected int getResultNumber(Connection connection) {
 		logger.debug("IN");
 		int resultNumber = 0;
-		Statement stmt = null;
+		PreparedStatement stmt = null;
 
 		ResultSet rs = null;
 
 		try {
 			String tableAlias = "temptable";
-			String sqlQuery = "SELECT COUNT(*) FROM (" + getStatement() + ") " + tableAlias;
+			String sqlQuery = String.format("SELECT COUNT(*) FROM (%s) %s", getStatement(), tableAlias);
 			logger.info("Executing query " + sqlQuery + " ...");
-			stmt = connection.createStatement(ResultSet.TYPE_FORWARD_ONLY, ResultSet.CONCUR_READ_ONLY);
-			rs = stmt.executeQuery(sqlQuery);
+			stmt = connection.prepareStatement(sqlQuery,ResultSet.TYPE_FORWARD_ONLY, ResultSet.CONCUR_READ_ONLY);
+			rs = stmt.executeQuery();
 			rs.next();
 			resultNumber = rs.getInt(1);
-		} catch (Throwable t) {
-			throw new SpagoBIRuntimeException("An error occurred while creating connection steatment", t);
+		} catch (Exception e) {
+			throw new SpagoBIRuntimeException("An error occurred while creating connection steatment", e);
 		} finally {
 			releaseResources(null, stmt, rs);
 		}
@@ -220,11 +220,9 @@ public class JDBCPostgreSQLDataProxy extends JDBCDataProxy {
 
 	private String getFinalStatement() {
 
-		if (fetchSize == -1) {
-			if (!this.statement.isEmpty()) {
-				this.statement = removeLastSemicolon(this.statement);
-				return this.statement;
-			}
+		if (fetchSize == -1 && !this.statement.isEmpty()) {
+			this.statement = removeLastSemicolon(this.statement);
+			return this.statement;
 		}
 
 		StringBuilder newStatement = new StringBuilder();
